test/Fail/OpaqueMutual.agda
module OpaqueMutual where

mutual
  opaque
    _ : Set
    _ = Nat
