test/Fail/OpaqueMutual.err
OpaqueMutual.agda:4.3-9: error: [Syntax.OpaqueInMutual]
Opaque blocks can not participate in mutual recursion. If the
opaque definitions are to be mutually recursive, move the 'mutual'
block inside the 'opaque' block.
